# ProjectML

./: .gitignore  CMakeLists.txt  CannyEdge.hpp  Corners.cpp  Corners.hpp  Filter.cpp  Filter.hpp  Gradient.cpp  Gradient.hpp  HarrisCorners.cpp  HarrisCorners.hpp  Helper.cpp  Helper.hpp  HoughLines.cpp  HoughLines.hpp  README.md  main.cpp
Algorithms/: Algorithms.cmake  Algorithms.cpp  Algorithms.h
Logging/: Logging.cmake  Logging.h
Primitive/: Matrix.h  Pixel.h  Primitive.cmake
